<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuStoryLocation"
        android:title="Story Location"
        android:icon="@drawable/ic_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuProfile"
        android:title="Profile"
        android:icon="@drawable/ic_account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuSetting"
        android:title="Setting"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />
</menu>